--- a/buzzle_novo-main/public/homeprof.css
+++ b/buzzle_novo-main/public/homeprof.css
@@ -58,7 +58,7 @@ aside {
     width: 100%;
     height: 100%;
     background-image: linear-gradient(#e4e4e4, #fdfdfd, #fdfdfd, #fdfdfd, #fdfdfd);
-}
+} 
 
 #secnav{
     width: 100%;
@@ -131,6 +131,12 @@ main {
     height: 60rem;
     background-image: url(imagens/colmeianova.png);
     border-radius: 2rem 0 0 0;
+}
+
+h4{
+    position:relative ;
+    margin-top: 50%;
+    right:25%
 }
 
 #fundo {
@@ -228,8 +234,8 @@ main {
 }
 
 .divatv{
-    background-image: url('imagens/marsela.png');
-    background-size: cover; /* ou contain, ou um tamanho específico */
+    background-image: url('imagens/marsela1.png');
+    background-size: contain; /* ou contain, ou um tamanho específico */
     background-repeat: no-repeat; /* Para não repetir a imagem */
     background-position: center; /* Para centralizar */
     width: 15rem;
