--- a/public/turma.css
+++ b/public/turma.css
@@ -137,6 +137,36 @@ main {
     justify-content: center;
 }
 
+#secroladora{
+    width: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    /*background-color: plum;*/
+    gap: 1rem;
+}
+
+.divatv{
+    background-image: url('imagens/errado.png');
+    background-size: contain; /* ou contain, ou um tamanho específico */
+    background-repeat: no-repeat; /* Para não repetir a imagem */
+    
+    width: 15rem;
+    height: 15rem;
+    background-color: #fdfdfd;
+    border: 0.4rem solid #e4e4e4;
+    border-radius: 3rem;
+    flex-shrink: 0;
+    flex-grow: 0;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.divatv:hover{
+    filter: brightness(95%);
+    border: 0.4rem solid #ffda33;
+}
+
 #secturmas{
     width: 100%;
     height: 75%;
